@@ -69,10 +69,10 @@ sub cmp
 
     if ( $ipA->bincomp('lt', $ipB) ) {
         return -1;
-    } elsif ( $ipB->bincomp('eq', $ipB)) {
-        return 0;
-    } else {
+    } elsif ( $ipA->bincomp('gt', $ipB)) {
         return 1;
+    } else {
+        return 0;
     }
 
 }
